k8s-examples/vs-studio/0-infra.yml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/name: vs
  name: vs
  annotations:
    services.k8s.aws/default-region: us-east-1
