k8s-examples/vs-studio/5-studio-server-service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: vs-studio
  name: studio-server-service
  namespace: vs
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      name: studio-server-service
  template:
    metadata:
      labels:
        name: studio-server-service
    spec:
      serviceAccountName: studio-sa
      containers:
        - name: studio-server
          image: ${AWS_ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com/viewspot-pricing-server:6.6.0dev12
          imagePullPolicy: IfNotPresent
          workingDir: /viewspot/studio/server
          command: [ "node" ]
          args: [ "dist/out-tsc/src/index.js" ]
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            failureThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 5m
              memory: 144Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: vs-studio
  name: studio-server-service
  namespace: vs
spec:
  selector:
    name: studio-server-service
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
