k8s-examples/vs-studio/7-studio-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: vs-studio
  name: studio-ingress
  namespace: vs
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: 300m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vs-studio.mvp-dev.viewspotstudio.com
      secretName: vs-studio-tls-secret
  rules:
    - host: vs-studio.mvp-dev.viewspotstudio.com
      http:
        paths:
          - path: /api/config/
            pathType: Prefix
            backend:
              service:
                name: studio-config-service
                port:
                  number: 80
    - host: vs-studio.mvp-dev.viewspotstudio.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: studio-nginx-proxy
                port:
                  number: 80
